Fix background color of menu on mobile

--- a/app/javascript/src/styles/specific/z_responsive.scss
+++ b/app/javascript/src/styles/specific/z_responsive.scss
@@ -271,7 +271,6 @@
   }
 
   header#top menu.main {
-    background-color: lighten($link-color, 25%);
     padding: 5px 10px;
   }
 
